# Voice-Task-Manager

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
app/: agent.py  config.py  crud.py  database.py  main.py  models.py
frontend/public/: mic-processor.js
frontend/src/: App.css  App.jsx
frontend/src/hooks/: voiceSocket.js
