[project]
name = "voice-task-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Eyyub01",email = "abbaszadeeyyub@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "websockets (>=16.0,<17.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
